--- a/index.html
+++ b/index.html
@@ -188,11 +188,30 @@
 
   </main><!-- /.container -->
 
-  <footer class="blog-footer">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-    <p>
-      <a href="#">Back to top</a>
-    </p>
+  <footer class="blog-footer ">
+    <div class="container">
+      <div class="row">
+        <a class="col">当サイトについて</a>
+        <a class="col">アカウントについて</a>
+        <a class="col">お支払いについて</a>
+        <a class="col">会員ステータス制度</a>
+        <a class="col">利用規約</a>
+        <a class="col">個人情報の保護に関する規約</a>
+        <a class="col">特商法に基づく表示</a>
+        <a class="col">推奨環境</a>
+        <a class="col">よくあるご質問</a>
+        <a class="col">会員退会</a>
+      </div>
+      <div class="row">
+        <p>[ お問い合わせ／ライブ・イベント等の出演依頼 ]</p>
+      </div>
+      <div class="row">
+        <p>掲載されているすべてのコンテンツ(記事、画像、音声データ、映像データ等)の無断転載を禁じます。</p>  
+      </div> 
+      <div class="row">
+        <p>© 2019 Tayama Shuta</p>
+      </div>
+    </div>
   </footer>
 
   <!-- Bootstrap core JavaScript
