--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-4"></div>
         <div class="col-4 text-center">
-          <a class="blog-header-logo text-dark" href="#">Git Workshop</a>
+          <a class="blog-header-logo" href="#">Git Workshop ~GROUP2~</a>
         </div>
         <div class="col-4">
         </div>
@@ -33,7 +33,7 @@
 
     <div class="nav-scroller py-1 mb-2">
       <nav class="nav d-flex justify-content-between align-items-center">
-        <a class="p-2 text-muted" href="#">t-hiroyoshi</a>
+        <a class="p-2 text-muted" href="#">group2</a>
       </nav>
     </div>
 
